added notebooks different agents

--- a/notebooks/1_symptom_checker.ipynb
+++ b/notebooks/1_symptom_checker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b16832e0",
    "metadata": {},
    "outputs": [
@@ -15,8 +15,8 @@
     }
    ],
    "source": [
-    "from configs import models, env, settings\n",
-    "from backend.llm.api import load_model, load_llm_langchain\n",
+    "from configs import models, env\n",
+    "from backend.llm.api import load_llm_langchain\n",
     "from backend.prompts.templates import symptom_prompt_template\n",
     "\n",
     "config_loaded = {\"model_config\": models, \"env\": env}\n",
