--- a/notebooks/2_ehr_summarizer.ipynb
+++ b/notebooks/2_ehr_summarizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "93e0a813",
    "metadata": {},
    "outputs": [
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "from configs import models, env, settings\n",
+    "from configs import models, env\n",
     "from backend.llm.api import load_model, load_llm_langchain\n",
     "from backend.prompts.templates import ehr_summarizer_prompt_template\n",
     "\n",
