added: notebooks for context memory and retrieval

--- a/notebooks/0_setup_environment.ipynb
+++ b/notebooks/0_setup_environment.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "14bc0a2a",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0af89881",
    "metadata": {},
    "outputs": [
@@ -105,33 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "cba1e03b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/38/sknm76sx0pn_hk94zlgzh5v80000gn/T/ipykernel_10527/2623814970.py:3: LangChainDeprecationWarning: The method `BaseLLM.__call__` was deprecated in langchain-core 0.1.7 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
-      "  llm(\"what do you know about diabities\")\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"A very important topic! Diabetes is a group of metabolic disorders characterized by high blood sugar levels. Here's what I know:\\n\\n**What is diabetes?**\\n\\nDiabetes occurs when the body either:\\n\\n1. **Cannot produce enough insulin**, a hormone produced by the pancreas that regulates blood sugar levels.\\n2. **Does not properly use insulin**, making it unable to effectively regulate blood sugar levels.\\n\\nInsulin helps glucose (sugar) enter cells, where it can be used as energy or stored for later use. When there's too much glucose in the bloodstream, it can cause a range of problems.\\n\\n**Types of diabetes:**\\n\\n1. **Type 1 Diabetes**: An autoimmune disease that causes the pancreas to stop producing insulin. Typically develops in childhood or adolescence.\\n2. **Type 2 Diabetes**: The most common form, accounting for about 90% of cases. It's caused by a combination of insulin resistance and impaired insulin secretion. Often develops in adulthood due to lifestyle factors like obesity, physical inactivity, and an unhealthy diet.\\n3. **Gestational Diabetes**: Developed during pregnancy, usually in the second or third trimester. Blood sugar levels rise due to hormonal changes, and this type of diabetes typically goes away after delivery.\\n4. **LADA (Latent Autoimmune Diabetes in Adults)**: A form of type 1 diabetes that develops in adults, often with a slower progression than typical type 1 diabetes.\\n\\n**Symptoms:**\\n\\nCommon symptoms of diabetes include:\\n\\n* Increased thirst and hunger\\n* Frequent urination\\n* Fatigue\\n* Blurred vision\\n* Slow healing of cuts or wounds\\n* Tingling or numbness in hands and feet\\n\\n**Complications:**\\n\\nIf left untreated or poorly managed, diabetes can lead to serious complications, such as:\\n\\n1. **Kidney damage**: Diabetic nephropathy (kidney disease)\\n2. **Nerve damage**: Diabetic neuropathy (nerve damage)\\n3. **Eye damage**: Diabetic retinopathy (eye damage) and diabetic macular edema\\n4. **Foot ulcers**: Increased risk of foot infections and amputations\\n5. **Heart disease**: Increased risk of heart attacks, strokes, and other cardiovascular conditions\\n\\n**Management:**\\n\\nTo manage diabetes effectively:\\n\\n1. **Monitor blood sugar levels**: Regularly test your blood sugar levels to ensure they're within a healthy range.\\n2. **Lifestyle changes**: Maintain a healthy weight through diet and exercise, and avoid tobacco use.\\n3. **Medication**: Take prescribed medications as directed by your healthcare provider.\\n4. **Insulin therapy**: For those with type 1 diabetes or type 2 diabetes that is not controlled with lifestyle changes and medication.\\n\\n**Prevention:**\\n\\nWhile there's no surefire way to prevent diabetes, maintaining a healthy lifestyle can reduce the risk:\\n\\n1. **Healthy diet**: Focus on whole, unprocessed foods like fruits, vegetables, whole grains, lean proteins, and healthy fats.\\n2. **Regular exercise**: Aim for at least 150 minutes of moderate-intensity aerobic exercise or 75 minutes of vigorous-intensity aerobic exercise per week.\\n3. **Maintain a healthy weight**: If you're overweight or obese, losing weight can help reduce your risk of developing type 2 diabetes.\\n\\nI hope this information helps! Do you have any specific questions about diabetes?\""
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "config_loaded = {\"model_config\":models,\"env\":env}\n",
     "llm = get_llm(source=\"ollama\", model_name=\"LLaMA-3\",extra_config=config_loaded)\n",
-    "llm(\"what do you know about diabities\")"
+    "# llm(\"what do you know about diabities\")"
    ]
   },
   {
