--- a/notebooks/0_setup_environment.ipynb
+++ b/notebooks/0_setup_environment.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "14bc0a2a",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "76795dc6",
    "metadata": {},
    "outputs": [
@@ -29,23 +29,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/\n",
-      "|   loaders/\n",
-      "|   - __init__.py\n",
-      "|   - api.py\n",
-      "|   |   - __init__.py\n",
-      "|   |   - anthropic_loader.py\n",
-      "|   |   - groq_loader.py\n",
-      "|   |   - huggingface_loader.py\n",
-      "|   |   - ollama_loader.py\n",
-      "|   |   - openai_loader.py\n",
-      "|   |   - together_loader.py\n"
+      "📁 backend/\n",
+      "├── 📁 agents/\n",
+      "│   ├── 📄 api.py\n",
+      "│   ├── 📄 memory.py\n",
+      "│   └── 📄 nodes.py\n",
+      "├── 📁 llm/\n",
+      "│   ├── 📁 loaders/\n",
+      "│   │   ├── 📄 __init__.py\n",
+      "│   │   ├── 📄 anthropic_loader.py\n",
+      "│   │   ├── 📄 groq_loader.py\n",
+      "│   │   ├── 📄 huggingface_loader.py\n",
+      "│   │   ├── 📄 ollama_loader.py\n",
+      "│   │   ├── 📄 openai_loader.py\n",
+      "│   │   └── 📄 together_loader.py\n",
+      "│   ├── 📄 __init__.py\n",
+      "│   └── 📄 api.py\n",
+      "├── 📁 prompts/\n",
+      "│   └── 📄 templates.py\n",
+      "├── 📁 rag/\n",
+      "│   ├── 📄 __init__.py\n",
+      "│   ├── 📄 agents.py\n",
+      "│   └── 📄 utils.py\n",
+      "├── 📁 vector_db/\n",
+      "│   ├── 📄 __init__.py\n",
+      "│   ├── 📄 chroma_client.py\n",
+      "│   └── 📄 index_utils.py\n",
+      "└── 📄 __init__.py\n",
+      "----\n",
+      "📁 notebooks/\n",
+      "├── 📄 0_setup_environment.ipynb\n",
+      "├── 📄 1_symptom_checker.ipynb\n",
+      "├── 📄 2_ehr_summarizer.ipynb\n",
+      "├── 📄 3_literature_qa.ipynb\n",
+      "├── 📄 4_drug_interaction_checker.ipynb\n",
+      "├── 📄 5_treatment_planner.ipynb\n",
+      "├── 📄 6_agentic_orchestration.ipynb\n",
+      "└── 📄 7_context_memory_and_retrieval.ipynb\n"
      ]
     }
    ],
    "source": [
-    "startpath = \"/Users/sunnyraj/code_files/git_repos/MedAgenticSage/backend/llm/\"\n",
-    "print_directory_structure(startpath, indent_char=\"|   \", file_prefix=\"- \", include_extensions = ['.py'])"
+    "startpath = \"/Users/sunnyraj/code_files/git_repos/MedAgenticSage/\"\n",
+    "# To see only Python files in your project\n",
+    "print_directory_structure(\n",
+    "    startpath + \"backend/\", \n",
+    "    include_extensions=['.py']\n",
+    ")\n",
+    "print(\"----\")\n",
+    "print_directory_structure(\n",
+    "    startpath + \"notebooks/\", \n",
+    "    include_extensions=['.ipynb']\n",
+    ")"
    ]
   },
   {
