--- a/notebooks/8_code_modularization.ipynb
+++ b/notebooks/8_code_modularization.ipynb
@@ -1,106 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "c336d6e8",
-   "metadata": {},
-   "source": [
-    "### 🧠 Context Memory and Retrieval (Embeddings + FAISS)\n",
-    "##### This notebook adds memory and retrieval capabilities to your autonomous agent system.\n",
-    "##### Features:\n",
-    "- Session memory: Track past outputs\n",
-    "- Embedding-based retrieval: Fetch relevant context dynamically\n",
-    "- Optional persistence"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bf329baa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 📦 Imports\n",
-    "from sentence_transformers import SentenceTransformer\n",
-    "import faiss\n",
-    "import numpy as np\n",
-    "from typing import List, Dict\n",
-    "import os\n",
-    "import pickle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "200450ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ✅ Configurable Variables\n",
-    "EMBEDDING_MODEL_NAME = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
-    "EMBEDDING_DIM = 384  # Depends on the model used\n",
-    "FAISS_STORE_PATH = \"/Users/sunnyraj/code_files/git_repos/MedAgenticSage/data/memory_store\"\n",
-    "\n",
-    "# 🔍 Load embedding model\n",
-    "embedding_model = SentenceTransformer(EMBEDDING_MODEL_NAME)\n",
-    "\n",
-    "# 🧠 Initialize FAISS index and memory\n",
-    "index = faiss.IndexFlatL2(embedding_model.get_sentence_embedding_dimension())\n",
-    "documents: List[str] = []\n",
-    "metadata: List[Dict] = []\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "a14919cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 📥 Add to memory + FAISS index\n",
-    "\n",
-    "def add_to_memory(text, source: str, tags: Dict = {}):\n",
-    "    if hasattr(text, \"content\"):  # Check if it's a LangChain Message\n",
-    "        text = text.content\n",
-    "    vector = embedding_model.encode([text])\n",
-    "    index.add(np.array(vector).astype(\"float32\"))\n",
-    "    documents.append(text)\n",
-    "    metadata.append({\"source\": source, \"tags\": tags})\n",
-    "\n",
-    "\n",
-    "# 🔎 Retrieve similar context\n",
-    "def retrieve_context(query: str, k: int = 3) -> List[Dict]:\n",
-    "    query_vec = embedding_model.encode([query])\n",
-    "    D, I = index.search(np.array(query_vec).astype(\"float32\"), k)\n",
-    "    results = []\n",
-    "    for i in I[0]:\n",
-    "        if i < len(documents):\n",
-    "            results.append({\n",
-    "                \"text\": documents[i],\n",
-    "                \"metadata\": metadata[i]\n",
-    "            })\n",
-    "    return results\n",
-    "\n",
-    "# 💾 Save / Load memory\n",
-    "\n",
-    "def save_memory(path=FAISS_STORE_PATH):\n",
-    "    os.makedirs(path, exist_ok=True)\n",
-    "    faiss.write_index(index, os.path.join(path, \"index.faiss\"))\n",
-    "    with open(os.path.join(path, \"meta.pkl\"), \"wb\") as f:\n",
-    "        pickle.dump((documents, metadata), f)\n",
-    "\n",
-    "\n",
-    "def load_memory(path=FAISS_STORE_PATH):\n",
-    "    global index, documents, metadata\n",
-    "    index = faiss.read_index(os.path.join(path, \"index.faiss\"))\n",
-    "    with open(os.path.join(path, \"meta.pkl\"), \"rb\") as f:\n",
-    "        documents, metadata = pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "5dfd78cb",
+   "execution_count": 1,
+   "id": "3195b8a6",
    "metadata": {},
    "outputs": [
     {
@@ -121,90 +24,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "98bd9ffe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ✨ Agent Node Wrappers with Memory Integration\n",
-    "from backend.agents.api import (\n",
-    "    run_symptom_checker,\n",
-    "    run_ehr_summarizer,\n",
-    "    run_literature_qa,\n",
-    "    run_drug_interactions,\n",
-    "    run_treatment_plan,\n",
-    ")\n",
-    "\n",
-    "def log_keys(state, node_name):\n",
-    "    print(f\"🔑 Keys in state at {node_name}: {list(state.keys())}\")\n",
-    "\n",
-    "\n",
-    "def symptom_node(state):\n",
-    "    log_keys(state, \"symptom_node\")\n",
-    "    symptoms = state.get(\"symptoms\")\n",
-    "    diagnosis = run_symptom_checker(symptoms, llm)\n",
-    "    state[\"diagnosis\"] = diagnosis\n",
-    "    add_to_memory(diagnosis, source=\"diagnosis\")\n",
-    "    return state\n",
-    "\n",
-    "def ehr_node(state):\n",
-    "    log_keys(state, \"ehr_node\")\n",
-    "    notes = state.get(\"ehr_text\")\n",
-    "    summary = run_ehr_summarizer(notes, llm)\n",
-    "    state[\"summary\"] = summary\n",
-    "    add_to_memory(summary, source=\"ehr_summary\")\n",
-    "    return state\n",
-    "\n",
-    "def literature_node(state):\n",
-    "    log_keys(state, \"literature_node\")\n",
-    "    question = state.get(\"question\")\n",
-    "    retrieved = retrieve_context(question)\n",
-    "    context = \"\\n\".join([r[\"text\"] for r in retrieved])\n",
-    "    answer = run_literature_qa(question, llm, context)\n",
-    "    state[\"literature_answer\"] = answer\n",
-    "    add_to_memory(answer, source=\"literature_qa\")\n",
-    "    return state\n",
-    "\n",
-    "\n",
-    "def drug_node(state):\n",
-    "    log_keys(state, \"drug_node\")\n",
-    "    meds = state.get(\"medications\")\n",
-    "\n",
-    "    # print(\"🔍 DEBUG - Raw meds:\", meds, \"| Type:\", type(meds))\n",
-    "\n",
-    "    # Defensive conversion\n",
-    "    if isinstance(meds, str):\n",
-    "        meds = [m.strip() for m in meds.split(\",\") if m.strip()]\n",
-    "    elif not isinstance(meds, list):\n",
-    "        print(\"⚠️ Unexpected medications type. Defaulting to empty list.\")\n",
-    "        meds = []\n",
-    "\n",
-    "    patient_data = state.get(\"diagnosis\", \"\")\n",
-    "    report = run_drug_interactions(meds, llm, patient_data)\n",
-    "    state[\"interaction_report\"] = report\n",
-    "    add_to_memory(report, source=\"drug_checker\")\n",
-    "    return state\n",
-    "\n",
-    "\n",
-    "\n",
-    "def treatment_node(state):\n",
-    "    log_keys(state, \"treatment_node\")\n",
-    "    profile = state.get(\"patient_profile\")\n",
-    "    plan = run_treatment_plan(profile, llm)\n",
-    "    state[\"treatment_plan\"] = plan\n",
-    "    add_to_memory(plan, source=\"treatment_plan\")\n",
-    "    return state"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "90c67850",
+   "execution_count": 4,
+   "id": "cf760fc6",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langgraph.graph import StateGraph, END\n",
     "from typing import TypedDict, Optional, List\n",
+    "from backend.agents.nodes import (\n",
+    "    symptom_node,\n",
+    "    ehr_node,\n",
+    "    literature_node,\n",
+    "    drug_node,\n",
+    "    treatment_node,\n",
+    ")\n",
+    "\n",
     "\n",
     "# Step 1: Define the schema\n",
     "class AgentState(TypedDict):\n",
@@ -219,14 +53,24 @@
     "    drug_warnings: Optional[str]\n",
     "    patient_profile: Optional[dict]\n",
     "\n",
+    "\n",
     "graph = StateGraph(state_schema=AgentState)\n",
     "\n",
-    "# Add nodes\n",
-    "graph.add_node(\"symptom_checker\", symptom_node)\n",
-    "graph.add_node(\"ehr_summarizer\", ehr_node)\n",
-    "graph.add_node(\"literature_qa\", literature_node)\n",
-    "graph.add_node(\"drug_checker\", drug_node)\n",
-    "graph.add_node(\"treatment_planner\", treatment_node)\n",
+    "# # Add nodes\n",
+    "# graph.add_node(\"symptom_checker\", symptom_node)\n",
+    "# graph.add_node(\"ehr_summarizer\", ehr_node)\n",
+    "# graph.add_node(\"literature_qa\", literature_node)\n",
+    "# graph.add_node(\"drug_checker\", drug_node)\n",
+    "# graph.add_node(\"treatment_planner\", treatment_node)\n",
+    "\n",
+    "# Bind graph nodes using lambdas to pass llm\n",
+    "graph.add_node(\"symptom_checker\", lambda state: symptom_node(state, llm))\n",
+    "graph.add_node(\"ehr_summarizer\", lambda state: ehr_node(state, llm))\n",
+    "graph.add_node(\"literature_qa\", lambda state: literature_node(state, llm))\n",
+    "graph.add_node(\"drug_checker\", lambda state: drug_node(state, llm))\n",
+    "graph.add_node(\"treatment_planner\", lambda state: treatment_node(state, llm))\n",
+    "\n",
+    "\n",
     "\n",
     "# Set flow\n",
     "graph.set_entry_point(\"symptom_checker\")\n",
@@ -243,8 +87,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "79beff5e",
+   "execution_count": 5,
+   "id": "644bb100",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +131,7 @@
       "\n",
       "* High: ACS, PE (immediate medical attention required)\n",
       "* Medium: COPD, Cardiac Arrhythmia (urgent evaluation and treatment)\n",
-      "* Low: Pneumonia (evaluation and treatment, but not immediately life-threatening)\n",
+      "* Low: Pneumonia (evaluation and treatment, but not immediately)\n",
       "\n",
       "**Recommended Next Steps:**\n",
       "\n",
@@ -297,12 +141,12 @@
       "\t* Perform ECG and obtain a chest X-ray.\n",
       "2. **COPD and Cardiac Arrhythmia:**\n",
       "\t* Schedule an urgent appointment with a primary care physician or cardiologist.\n",
-      "\t* Perform a physical examination, ECG, and pulmonary function tests (PFTs).\n",
-      "\t* Consider ordering a chest X-ray and echocardiogram.\n",
+      "\t* Perform pulmonary function tests (PFTs) and ECG.\n",
+      "\t* Consider a chest X-ray and echocardiogram.\n",
       "3. **Pneumonia:**\n",
       "\t* Schedule an appointment with a primary care physician.\n",
       "\t* Perform a physical examination, chest X-ray, and obtain a complete blood count (CBC).\n",
-      "\t* Consider ordering a sputum culture and antibiotic treatment.\n",
+      "\t* Consider a sputum culture and antibiotic treatment.\n",
       "\n",
       "\n",
       "📌 SUMMARY:\n",
@@ -368,6 +212,14 @@
     "        print(repr(value))\n",
     "    print()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e5b5a88",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
