added complete flow

--- a/notebooks/0_setup_environment.ipynb
+++ b/notebooks/0_setup_environment.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "14bc0a2a",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "76795dc6",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,8 @@
       "├── 📁 agents/\n",
       "│   ├── 📄 api.py\n",
       "│   ├── 📄 memory.py\n",
-      "│   └── 📄 nodes.py\n",
+      "│   ├── 📄 nodes.py\n",
+      "│   └── 📄 templates.py\n",
       "├── 📁 llm/\n",
       "│   ├── 📁 loaders/\n",
       "│   │   ├── 📄 __init__.py\n",
@@ -47,10 +48,6 @@
       "│   └── 📄 api.py\n",
       "├── 📁 prompts/\n",
       "│   └── 📄 templates.py\n",
-      "├── 📁 rag/\n",
-      "│   ├── 📄 __init__.py\n",
-      "│   ├── 📄 agents.py\n",
-      "│   └── 📄 utils.py\n",
       "├── 📁 vector_db/\n",
       "│   ├── 📄 __init__.py\n",
       "│   ├── 📄 chroma_client.py\n",
@@ -65,7 +62,8 @@
       "├── 📄 4_drug_interaction_checker.ipynb\n",
       "├── 📄 5_treatment_planner.ipynb\n",
       "├── 📄 6_agentic_orchestration.ipynb\n",
-      "└── 📄 7_context_memory_and_retrieval.ipynb\n"
+      "├── 📄 7_context_memory_and_retrieval.ipynb\n",
+      "└── 📄 8_code_modularization.ipynb\n"
      ]
     }
    ],
